# awaaz

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  LICENSE  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 9cbf7db8429b_initial_schema.py
docker/supertonic/: Dockerfile
docs/: api.md  architecture.md  releasing.md
frontend/: Dockerfile  eslint.config.js  index.html  jest.config.cjs  nginx.conf.template  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/__tests__/: GenerationForm.test.tsx  JobCard.test.tsx  api.test.ts
frontend/src/api/: chunking.ts  client.ts
frontend/src/components/: GenerationForm.tsx  JobCard.tsx  Modal.tsx  NewDocument.tsx  SettingsModal.tsx  VoiceSelector.tsx
scripts/: bump-version.ps1
src/awaaz/: __init__.py  api.py  celery_tasks.py  config.py  db.py  main.py  models.py  run_queue_worker.py  schemas.py  worker.py
src/awaaz/adapters/: base.py  (+2 more)
test_files/: sample_long.txt  sample_medium.txt  sample_short.txt
tests/: _set_test_env.py  conftest.py  test_adapters.py  test_api_cleanup.py  test_api_collection.py  test_api_collection_names.py  test_api_contract.py  test_api_preview.py  test_api_voices.py  test_audio.py  test_celery_tasks.py  test_chunking.py  test_collection_names.py  test_files.py  test_progress.py  test_queue_recovery.py  test_schema_collection_names.py  test_services.py  test_settings.py
(+9 files in other folders)
