[project]
name = "awaaz"
version = "1.0.2"
authors = [
    { name = "Sharad Raj Singh Maurya" }
]
description = "Resumable, API-first audiobook generation service"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiofiles==24.1.0",
    "aiosqlite==0.21.0",
    "alembic==1.16.2",
    "fastapi==0.115.12",
    "httpx==0.28.1",
    "pydantic-settings==2.9.1",
    "python-multipart==0.0.20",
    "sqlalchemy==2.0.41",
    "uvicorn==0.34.2",
]

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "pytest-cov==6.1.1",
    "ruff==0.11.10",
    "types-aiofiles==24.1.0.20250822",
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/awaaz"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["awaaz"]
